--- a/MyClock/MyClock.csproj
+++ b/MyClock/MyClock.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
     <PackageReference Include="Xamarin.Essentials" Version="1.2.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
+    <PackageReference Include="Xam.Plugin.SimpleAudioPlayer" Version="1.3.1" />
   </ItemGroup>
 </Project>
