--- a/MyClock.UWP/MyClock.UWP.csproj
+++ b/MyClock.UWP/MyClock.UWP.csproj
@@ -155,6 +155,7 @@
     <AndroidAsset Include="Assets\hour_8.m4a" />
     <AndroidAsset Include="Assets\hour_9.m4a" />
     <AndroidAsset Include="Assets\music.mp3" />
+    <Content Include="Assets\add.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
