--- a/MyClock.iOS/MyClock.iOS.csproj
+++ b/MyClock.iOS/MyClock.iOS.csproj
@@ -157,4 +157,7 @@
     <BundleResource Include="Resources\hour_22.m4a" />
     <BundleResource Include="Resources\hour_23.m4a" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\add.png" />
+  </ItemGroup>
 </Project>
