--- a/MyClock.UWP/MyClock.UWP.csproj
+++ b/MyClock.UWP/MyClock.UWP.csproj
@@ -189,6 +189,10 @@
       <Name>MyClock</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\clock.png" />
+    <None Include="Assets\shizhong.png" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
